# fcfTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.md.backup  VERSION  test.hpp
.github/workflows/: ci.yml  release.yml  test.yml
examples/001-simple-example/: CMakeLists.txt  simple-example.cpp
examples/002-logger-and-benchmark-example/: CMakeLists.txt  logger-and-benchmark-example.cpp
examples/003-logger-function-prefix-example/: CMakeLists.txt  logger-function-prefix-example.cpp
examples/full-example/: CMakeLists.txt  full-example.cpp
examples/readme-example/: CMakeLists.txt  readme-example.cpp
test/: CMakeLists.txt  main.cpp
test/tests/: cmd.cpp  export.cpp  helpers.hpp  macro-FCF_TEST_THROW.cpp  macro-FCF_TEST_THROW_CHECK.cpp  macro.cpp  order.cpp  storage.cpp
